# playwright-web-automation

./: .env.example  .gitignore  api.py  authenticate.py  config.yaml  main.py  pyproject.toml  requirements.txt  setup_env.sh  verify_final.py  verify_init.py  verify_logger.py  verify_shared_state.py
activities/: base.py  basic.py  registry.py  runner.py
activities/impl/: battle.py  collect.py  home.py  league.py  season.py  training.py
config/: config.yaml  settings.yaml  villains.yaml
docs/adr/: 001-activity-strategy-pattern.md  002-security-standards.md
tests/: test_activities.py  test_auth.py  test_battle_activity.py  test_env.py  test_orchestrator.py  test_session.py
utils/: api.py  auth.py  config_loader.py  human.py  logger.py  session.py  session_manager.py  state.py
