[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.49.0",
    "pytest-asyncio>=1.3.0",
    "pytest-playwright>=0.6.0",
    "pyyaml>=6.0.0",
    "structlog>=24.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
