[project]
name = "game-bot"
version = "0.1.0"
description = "A structured game bot project using Playwright and structlog"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.3",
    "playwright>=1.49.0",
    "pytest-asyncio>=1.3.0",
    "pytest-playwright>=0.6.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.0",
    "structlog>=24.0.0",
    "uvicorn>=0.40.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
